[package]
name = "derive_type_level"
version = "0.0.20"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "macro 1.1 for the type_level package."
readme="../readme.md"
keywords = ["typelevel", "no_std"]
repository = "https://github.com/rodrimati1992/type_level"
include = ["Cargo.toml", "src/**/*.rs", "../readme.md", "../APACHE_license", "../MIT_license"]

[dependencies.derive_type_level_lib]
path="../derive_type_level_lib"



[lib]
proc-macro = true
