[package]
name = "derive_type_level"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "macro 1.1 for type_level values and users of them."
readme="../readme.md"
keywords = ["typelevel", "no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/type_level"
include = ["Cargo.toml", "src/**/*.rs", "../readme.md", "../APACHE_license", "../MIT_license"]

[badges]
travis-ci = { repository =  "rodrimati1992/type_level/" }


[dependencies.derive_type_level_lib]
path="../derive_type_level_lib"
version = "0.1.0"



[lib]
proc-macro = true
