[package]
name = "derive_type_level_lib"
version = "0.0.20"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "implementation of the macro 1.1 for the type_level package."
readme="../readme.md"
keywords = ["typelevel", "no_std"]
repository = "https://github.com/rodrimati1992/type_level"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "build.rs", 
    "../readme.md", 
    "../APACHE_license", "../MIT_license"
]


[dependencies]
arrayvec = "0.4"
quote = "0.6"
proc-macro2 = "0.4"
lazy_static = "1.0"
typed-arena = "1.4"
regex="1.0"

[dependencies.syn]
version = "0.14"
features=["extra-traits","visit","visit-mut"]



[dependencies.core_extensions]
version="0.1.3"

[build-dependencies]
rustc_version = "0.2"