[package]
name = "derive_type_level_lib"
version = "0.0.23"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "macros 1.1 derive macros for type-level values and users of them."
readme="../readme.md"
keywords = ["typelevel", "no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/type_level"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "build.rs", 
    "../readme.md", 
    "../APACHE_license", "../MIT_license"
]



[badges]
travis-ci = { repository =  "rodrimati1992/type_level/" }


[dependencies]
arrayvec = "0.4"
quote = "0.6"
proc-macro2 = "0.4"
lazy_static = "1.0"
typed-arena = "1.4"
regex="1.0"

[dependencies.syn]
version = "0.15.11"
features=["extra-traits","visit","full","visit-mut"]

[dependencies.core_extensions]
version="0.1.4"

[build-dependencies]
rustc_version = "0.2"
