[package]
name = "type_level_examples"
version = "0.0.20"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Examples that use the type_level package."
readme="../readme.md"
keywords = ["typelevel", "no_std"]
repository = "https://github.com/rodrimati1992/type_level"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../readme.md", 
    "../APACHE_license", "../MIT_license"
]



[features]
priv_docs=[]


[dependencies]
typenum = {version="1.10.0"}
num-traits={version="0.2"}
serde_json={version="1.0"}
serde={version="1.0"}
serde_derive={version="1.0"}
core_extensions={version="0.1"}
type_level_values={path="../type_level_values",features=["serde"]}
derive_type_level={path="../derive_type_level"}
derive_type_level_lib={path="../derive_type_level_lib"}
take_mut="0.2"


[build-dependencies]
rustc_version = "0.2"