[package]
name = "type_level_examples"
version = "0.0.22"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Examples of using type-level values and functions."
documentation = "https://docs.rs/type_level_examples/"
readme="./readme.md"
keywords = ["typelevel"]
categories = []
repository = "https://github.com/rodrimati1992/type_level"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./readme.md", 
    "../APACHE_license", "../MIT_license"
]


[badges]
travis-ci = { repository =  "rodrimati1992/type_level/" }


[features]
priv_docs=[]


[dependencies]
typenum = {version="1.10.0"}
num-traits={version="0.2"}
serde_json={version="1.0"}
serde={version="1.0"}
serde_derive={version="1.0"}
core_extensions={version="0.1"}
type_level_values={path="../type_level_values",features=["serde"],version="0.0.21"}
derive_type_level={path="../derive_type_level",version="0.0.21"}
derive_type_level_lib={path="../derive_type_level_lib",version="0.0.21"}
take_mut="0.2"


[build-dependencies]
rustc_version = "0.2"